--- a/rochambeau.html
+++ b/rochambeau.html
@@ -12,12 +12,14 @@
 
 <body>
     <div class="container">
-        <h1>Rock, Paper, Scissors Game</h1>
-        <p>Let's Play Rock, Paper Scissors! Press your choice and then press PLAY!</p>
+        <h1>Rock, Scissors, Paper, Lizard, Spock</h1>
+        <p>Press your choice and then press PLAY!</p>
         <p>
             <button type="button" class="btn btn-default" id="rock">Rock</button>
             <button type="button" class="btn btn-default" id="paper">Paper</button>
             <button type="button" class="btn btn-default" id="scissors">Scissors</button>
+            <button type="button" class="btn btn-default" id="lizard">Lizard</button>
+            <button type="button" class="btn btn-default" id="spock">Spock</button>
         </p>
         <input type="button" value="Play" class="btn btn-primary" id="play">
         <div id="result"></div>
